# misskey-markov-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  config.example.yml  instance.txt  token.txt
.github/workflows/: build.yml
src/: conf.rs  cred.rs  main.rs  posts.rs
